--- a/html/estilo/style.css
+++ b/html/estilo/style.css
@@ -28,6 +28,7 @@ section#login {
     top: 50%;
     transform: translate(-50%, -50%);
     border-radius: 20px;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.544);
 }
 
 section > p {
@@ -41,30 +42,83 @@ div#imagem > img {
     background-position: center;
     margin-top: 0px;
     border-radius: 20px 20px 0 0;
-
 }
 
 div > p {
     text-align: center;
     font-size: 1.5em;
     color: black;
+    margin: 10px;
+    font-style: oblique;
 }
 
-div#email {
-    margin-top: 10px;
-    margin: auto;
-    padding: 10px;
-
-}
-
-form > input[type=submite] {
+div.campo {
     display: block;
-    font-size: 1em;
-    width: 100%;
     height: 40px;
-    background-color: #49a09d;
-    color: white;
-    border: none;
-    border-radius: 5px;
-
+    font-size: 1.1em;
+    text-indent: 35px;
+    background-color: #F54EED;
+    margin: 5px;
+    border-radius: 10px;
 }
+
+input#email {
+    display: cover;
+    height: 40px;
+    width: 85%;
+    padding: 10px;
+    border-radius: 10px;
+    border: none;
+}
+
+#person {
+    display: inline-block;
+    position: absolute;
+    height: 30px;
+    top: 308px;
+    left: -24px;
+    font-size: 1.5em;
+}
+
+input#senha {
+    height: 40px;
+    width: 85%;
+    padding: 10px;
+    border-radius: 10px;
+    border: none;
+}
+
+#key {
+    display: inline-block;
+    position: absolute;
+    top: 354px;
+    left: -25px;
+    font-size: 1.5em;
+}
+
+label {
+    background-position: left;
+    display: none;
+}
+
+input[type=submit] {
+    display: block;
+    height: 40px;
+    width: 100px;
+    margin: auto;
+    border-radius: 10px;
+}
+
+div#entrar  a {
+    display: block;
+    text-align: center;
+    padding: 10px;
+    text-decoration: none;
+}
+
+
+div#entrar a:hover {
+    color: #F54EED;
+    text-decoration: underline;
+}
+
